--- a/data/projects.json
+++ b/data/projects.json
@@ -20,11 +20,7 @@
       "demo": "https://garymike07.github.io/myk/",
       "screenshots": ["portfolio1.jpg", "portfolio2.jpg"]
     },
-    {
-      "id": 1,
-      "title": "SaaS Landing Page",
-      "category": "saas",
-      "status": "live",
+      "status": "ongoing",
       "description": "Modern, conversion-optimized landing page for SaaS products with animated sections and responsive design.",
       "tags": ["React", "Tailwind CSS", "Framer Motion", "TypeScript"],
       "thumbnail": "🚀",
@@ -82,11 +78,7 @@
       "demo": "https://shop-demo.mikesites.dev",
       "screenshots": ["shop1.jpg", "shop2.jpg"]
     },
-    {
-      "id": 5,
-      "title": "Cafe Website",
-      "category": "portfolio",
-      "status": "live",
+      "status": "ongoing",
       "description": "Elegant website for a local cafe with online menu, reservation system, and location information.",
       "tags": ["Vue.js", "Nuxt.js", "SCSS", "Firebase"],
       "thumbnail": "☕",
