🚀 Major redesign: Professional portfolio with modern UI, enhanced features, and improved UX
✨ New Features:
- Professional hero section with animated elements
- Interactive project showcase with modal details
- Multi-theme support (Dark, Light, Neon)
- Real-time clock and daily coding tips
- Enhanced About section with timeline
- Improved Contact form with better UX

🎨 Design Improvements:
- Modern gradient backgrounds and animations
- Professional color schemes and typography
- Responsive design for all devices
- Smooth transitions and hover effects
- Custom scrollbar and loading animations

🖼️ New Assets:
- Professional avatar and hero background
- High-quality project thumbnails
- Custom icons and visual elements

🔧 Technical Enhancements:
- Improved JavaScript architecture
- Better error handling and fallbacks
- Enhanced CSS with modern features
- Optimized performance and accessibility

📱 Mobile Responsive:
- Fully responsive across all screen sizes
- Touch-friendly interactions
- Optimized mobile navigation

--- a/data/projects.json
+++ b/data/projects.json
@@ -27,7 +27,7 @@
       "status": "ongoing",
       "description": "Modern, conversion-optimized landing page for SaaS products with animated sections and responsive design.",
       "tags": ["React", "Tailwind CSS", "Framer Motion", "TypeScript"],
-      "thumbnail": "🚀",
+      "thumbnail": "images/saas-landing-thumbnail.png",
       "features": [
         "Responsive design for all devices",
         "Smooth scroll animations",
@@ -49,7 +49,7 @@
       "status": "progress",
       "description": "Feature-rich blog template with markdown support, search functionality, and social sharing capabilities.",
       "tags": ["Next.js", "MDX", "Tailwind CSS", "Prisma"],
-      "thumbnail": "📝",
+      "thumbnail": "images/blog-template-thumbnail.png",
       "features": [
         "Markdown blog posts",
         "Search and filtering",
@@ -69,7 +69,7 @@
       "status": "concept",
       "description": "Full-featured e-commerce platform with shopping cart, payment integration, and admin dashboard.",
       "tags": ["React", "Node.js", "MongoDB", "Stripe"],
-      "thumbnail": "🛒",
+      "thumbnail": "images/ecommerce-thumbnail.png",
       "features": [
         "Product catalog",
         "Shopping cart",
